patch: fix scrollbar appearing in popup

--- a/client/src/app/components/pour-feliciter/pour-feliciter.component.scss
+++ b/client/src/app/components/pour-feliciter/pour-feliciter.component.scss
@@ -10,7 +10,6 @@ iframe {
   width: 100%;
   height: 100%;
   min-height: 500px;
-  min-width: 50vw;
   border: none;
 }
 
